# kestrel-feature-mcp

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
kestrel_feature_mcp/: __init__.py  catalog.toml  component.yaml  constants.py  dynamic_tools.py  feature.py  gateway.py  manager.py  registry.py
tests/integration/: test_mcp_agent_workflow.py  test_mcp_gateway.py  test_mcp_real_servers.py  test_mcp_registry.py  test_mcp_tools_e2e.py
tests/integration/mcp_test_server/: Dockerfile  server.py
tests/unit/: test_gateway_longlived.py  test_gateway_transport.py  test_mcp_connect_to_tool.py  test_mcp_dynamic_mounting.py  test_mcp_feature_toolresult.py  test_mcp_healthcheck.py  test_mcp_load_routing.py  test_mcp_persistence.py
