[project]
name = "kestrel-feature-mcp"
version = "0.1.0"
description = "Kestrel MCP agent feature"
requires-python = ">=3.11"
dependencies = [
    "kestrel-sovereign-sdk @ git+https://github.com/KestrelSovereignAI/kestrel-sovereign-sdk.git",
    "kestrel-sovereign @ git+https://github.com/KestrelSovereignAI/kestrel-sovereign.git",
    "mcp>=1.26.0",
    "docker>=7.1.0",
]

[project.entry-points."kestrel_sovereign.features"]
MCPAgent = "kestrel_feature_mcp:MCPAgent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["kestrel_feature_mcp"]
