[project]
name = "kestrel-feature-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server management for Kestrel Sovereign agents"
requires-python = ">=3.11"
dependencies = [
    "kestrel-sovereign-sdk>=0.1,<1",
    "docker>=7.1.0",
    "mcp>=1.26.0",
    "aiohttp>=3.13.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
    "pytest-timeout>=2.3.1",
]

[project.entry-points."kestrel_sovereign.features"]
MCPAgent = "kestrel_feature_mcp.feature:MCPAgent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["kestrel_feature_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
