[project]
name = "kestrel-feature-mcp"
version = "0.3.1"
description = "Model Context Protocol (MCP) server management for Kestrel Sovereign agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "kestrel-sovereign-sdk>=0.10,<1",
    "docker>=7.1.0",
    "mcp>=1.26.0",
    "aiohttp>=3.13.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
    "pytest-timeout>=2.3.1",
]

[project.entry-points."kestrel_sovereign.features"]
MCPAgent = "kestrel_feature_mcp.feature:MCPAgent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["kestrel_feature_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "docker: tests that require Docker",
    "docker_mcp: tests that require Docker MCP Toolkit",
]
